fix: use gap to add space on mobile view

--- a/frontend/src/components/PsyListing/publicPsychologistProfile.cssmodule.scss
+++ b/frontend/src/components/PsyListing/publicPsychologistProfile.cssmodule.scss
@@ -4,6 +4,10 @@
   padding-bottom: 24px;
 }
 
+.psyInfo {
+  gap: 16px 0px;
+}
+
 .field {
   padding: 8px 0px;
 }
@@ -14,7 +18,6 @@
 
 .mapContainer {
   width: 100%;
-  margin-top: 16px;
 }
 
 .map {
